*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/editors.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors.htm
@@ -23,7 +23,7 @@ by using the facilities provided in
 JFace.&nbsp; The latter approach is used by the Java development tooling (JDT)
 editors.&nbsp;&nbsp;</P>
     <p >
-<img border="0" src="images/javaeditor.jpg" width="429" height="376">
+<img alt="" border="0" src="images/javaeditor.jpg" width="429" height="376">
     <p >
 If a plug-in's editor is not text based, then a custom editor must be implemented by the plug-in. There are several approaches for building
 custom editors, all of which depend on the look and behavior of the editor.
