--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench.htm
@@ -33,7 +33,7 @@ an editor input as a file name, though it is more general.
 the labels at the top of the editor.</P>
 
 <P >
-<img border="0" src="images/editorInputLabel.jpg" width="140" height="31"></P>
+<img alt="" border="0" src="images/editorInputLabel.jpg" width="140" height="31"></P>
 <P >
 Two generic editor inputs are provided in the platform. <a href="../reference/api/org/eclipse/ui/IFileEditorInput.html"><b> IFileEditorInput</b></a> represents an input
 that is a file in the file system.&nbsp;
