--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench_outliner.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench_outliner.htm
@@ -27,7 +27,7 @@ doesn't know anything about the structure of its text, it cannot provide
 behavior for an interesting outline view.&nbsp; Therefore, the default <b>Outline</b> view,
 shown below, doesn't
 do much.</P>
-<P ><img border="0" src="images/genericoutliner.jpg" width="271" height="292"></P>
+<P ><img border="0" src="images/genericoutliner.jpg" width="271" height="292" alt="Default content outliner"></P>
 <P >Plug-ins can extend <a href="../reference/api/org/eclipse/ui/editors/text/TextEditor.html"><b> TextEditor</b></a><b>
 </b>for the sole purpose of adding a custom content outliner page to the
 outline view.&nbsp;&nbsp; This approach is used in the workbench readme tool example.&nbsp;
@@ -54,7 +54,7 @@ showing the <b>Outline</b> view.)</P>
 
 
 <P >
-<img border="0" src="images/readmeoutliner.jpg" width="274" height="294"></P>
+<img border="0" src="images/readmeoutliner.jpg" width="274" height="294" alt="Readme content outliner"></P>
 
 
 <P >A content outliner page must implement <b><a href="../reference/api/org/eclipse/ui/views/contentoutline/IContentOutlinePage.html">IContentOutlinePage</a></b>.&nbsp;
@@ -71,7 +71,7 @@ appearance to the readme sections view, shown below,&nbsp; that we saw when we
 implemented the <a href="workbench_basicext_views.htm">readme views extension</a>.</P>
 
 
-<P ><img border="0" src="images/readmeview.jpg" width="277" height="191"></P>
+<P ><img border="0" src="images/readmeview.jpg" width="277" height="191" alt="Readme sections dialog"></P>
 
 
 <P >In fact, the only real difference is that the outliner displays a
@@ -146,7 +146,7 @@ elements in the outliner are located in the source code.</P>
 
 
 <P >
-<img border="0" src="images/javacontentoutline.jpg" width="659" height="384"></P>
+<img border="0" src="images/javacontentoutline.jpg" width="659" height="384" alt="Java editor with content outliner"></P>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
