--- a/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_install.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_install.htm
@@ -29,7 +29,7 @@ qualified id, including the dots.&nbsp; In this case, we need to create a direct
   (You can export the <b>plugin.xml</b> to the file system using the <b>File-&gt;Export</b>
   wizard.) </P>
 <P >
-<img border="0" src="images/helloinstall.jpg" width="740" height="528"> </P>
+<img alt="" border="0" src="images/helloinstall.jpg" width="740" height="528"> </P>
 <P >If you are currently running the workbench, you will need to shut it down
 and restart it.&nbsp; When the platform starts, it assembles a list of all of the plug-ins installed in the system, called the plug-in registry. This registry keeps track of plug-ins and the extension points that they contribute.&nbsp;
 Restarting the workbench will cause it to find your new plug-in.</P>
@@ -42,7 +42,7 @@ things simple.)&nbsp;</P>
 that have been contributed by plug-ins using the <b>Window-&gt;Show
 View</b> menu.</P>
 
-<img border="0" src="images/perspectivemenu.jpg" width="391" height="257">
+<img alt="" border="0" src="images/perspectivemenu.jpg" width="391" height="257">
 <P >
 This menu shows us what views are available for the current perspective. You can see all of the views that are contributed to the platform (regardless of perspective) by selecting
 <b>Other...</b>. This will display a list of view categories and the views available under each category. </P>
@@ -51,7 +51,7 @@ The workbench creates the full list of views by using the plug-in registry to
 find all the plug-ins that have provided extensions for the
 <a href="../reference/extension-points/org_eclipse_ui_views.html"><b> org.eclipse.ui.views</b></a> extension point. </P>
 
-<img border="0" src="images/showview.jpg" width="294" height="412">
+<img alt="Show View dialog with Hello entry" border="0" src="images/showview.jpg" width="294" height="412">
 <P >
 There we are! The view called &quot;Hello Greetings&quot; has been added to the <b> Show View</b> window underneath our category &quot;Hello.&quot; The labels for our category and view were obtained from the extension point configuration markup in the
 <b>plugin.xml</b>. </P>
@@ -66,7 +66,7 @@ workbench will
 activate our plug-in, instantiate and initialize our view class, and show the
 new view in the workbench along with all of the other views. Now our code is running.&nbsp;</P>
 
-<img border="0" src="images/workbenchwithhello.jpg" width="724" height="537">
+<img border="0" src="images/workbenchwithhello.jpg" width="724" height="537" alt="Workbench with Hello World view">
 <P >
 There it is, our first plug-in! We'll cover more specifics about UI classes and extension points later on.</P>
 
