--- a/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_minimal.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_minimal.htm
@@ -120,7 +120,7 @@ Okay, so we've compiled the view.&nbsp; Our new view is supposed to look somethi
 
 <p>
 
-<img border="0" src="images/hello.jpg" width="538" height="250">
+<img border="0" src="images/hello.jpg" width="538" height="250" alt="Simple view that says Hello World">
 </p>
 <P >
 How do we run the code and add this view to the workbench?</P>
