--- a/bundles/org.eclipse.platform.doc.isv/guide/help_active_action.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_active_action.htm
@@ -41,9 +41,15 @@ action.&nbsp; We don't need any information from the JavaScript, so the
 initialization data is ignored.</p>
 
 
-<p class="Note">Note:&nbsp; The class <b>OpenPreferencesAction</b> is internal to the
+<blockquote>
+
+
+<p><i>Note:&nbsp; The class OpenPreferencesAction is internal to the
 workbench.&nbsp; In this example, we are using it at our own risk since it could
-change in the future.</p>
+change in the future.</i></p>
+
+
+</blockquote>
 
 
 <pre><font color="#4444CC">package org.eclipse.platform.doc.isv.activeHelp;
