--- a/bundles/org.eclipse.platform.doc.isv/guide/help_infopops.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_infopops.htm
@@ -21,7 +21,7 @@ is activated when the user puts focus on the widget and presses the F1 key.
 </p><p>To associate an infopop with a widget, you must first assign a context ID
 to the widget and then provide the description and links for the infopop.&nbsp;
 Here is an infopop that has been defined on a workbench preferences page:
-</p><p><img border="0" src="images/infopops.jpg" width="452" height="237">
+</p><p><img border="0" src="images/infopops.jpg" width="452" height="237" alt="File associations dialog with infopop">
 </p></font>
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
