--- a/bundles/org.eclipse.platform.doc.isv/guide/team_ui_decorators.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_ui_decorators.htm
@@ -20,7 +20,7 @@ revisions.
 
 
 
-<p><img border="0" src="images/teamdecorators.jpg">
+<p><img border="0" src="images/teamdecorators.jpg" alt="Resource navigator with team decorators turned on" width="295" height="221">
 </p>
 
 
