--- a/bundles/org.eclipse.platform.doc.isv/guide/team_ui_prefs.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_ui_prefs.htm
@@ -26,7 +26,7 @@ together.&nbsp; The CVS markup for the main preferences page looks like this:</p
 &lt;/extension&gt;</font></pre>
 <p>The preferences dialog shows the CVS preferences underneath the team
 category.</p>
-<p><img border="0" src="images/teamprefs.jpg" width="641" height="532"></p>
+<p><img alt="" border="0" src="images/teamprefs.jpg" width="641" height="532"></p>
 <p>&nbsp;</p>
 <p>Properties are added as described by <a href="../reference/extension-points/org_eclipse_ui_propertyPages.html"><b>org.eclipse.ui.propertyPages</b></a>.&nbsp;
 There is no special team category for properties, since a resource can only be
