--- a/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_manifest.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/help_plugin_manifest.htm
@@ -63,12 +63,12 @@ toc. </P>
 <b> Help-&gt;Help Contents</b>, you should see your example appear in the list
 of books: </P>
 
-<P ><img border="0" src="images/help_books.jpg" width="240" height="228"> </P>
+<P ><img border="0" src="images/help_books.jpg" width="240" height="228" alt="List of books with example entry"> </P>
 
 <p>&nbsp;</p>
 <p>If you click on the &quot;Online Help Sample&quot;, you'll see your toc
 structure.</p>
-<p><img border="0" src="images/help_contents.jpg" width="918" height="598"></p>
+<p><img border="0" src="images/help_contents.jpg" width="918" height="598" alt="On-line help browser with sample book structure"></p>
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 
