--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_decorators.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_decorators.htm
@@ -27,7 +27,7 @@ Many of the standard workbench views participate in showing decorations.&nbsp;&n
 binary and source projects.</p>
 
 
-<p><img border="0" src="images/workbenchdecorators.jpg" width="317" height="122"></p>
+<p><img border="0" src="images/workbenchdecorators.jpg" width="317" height="122" alt="Package explorer view with PDE decorators"></p>
 
 
 <p>The <b>com.example.sourceProject&nbsp; </b>project is the only source project
@@ -73,7 +73,7 @@ own preferences that allow the user to further fine-tune the decorator once it
 is on.&nbsp; This technique is used by the CVS client.</p>
 
 
-<p><img border="0" src="images/cvsdecorators.jpg" width="508" height="454"></p>
+<p><img border="0" src="images/cvsdecorators.jpg" width="508" height="454" alt="CVS decorators preference page"></p>
 
 
 <p>&nbsp;</p>
