--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_resourceFilters.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_resourceFilters.htm
@@ -36,7 +36,7 @@ from the workbench <b>plugin.xml</b>.</P>
 pull-down menu.</P>
 
 
-<P ><img border="0" src="images/filtersmenu.jpg" width="405" height="137"></P>
+<P ><img alt="" border="0" src="images/filtersmenu.jpg" width="405" height="137"></P>
 
 
 <P >In addition to declaring the <b>filter pattern</b>,
@@ -46,7 +46,7 @@ This attribute only determines the initial state of the filter pattern.&nbsp; Th
 control which filter patterns are active.</P>
 
 
-<P ><img border="0" src="images/filtersselection.jpg" width="344" height="368"></P>
+<P ><img alt="" border="0" src="images/filtersselection.jpg" width="344" height="368"></P>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
