*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/preferences_prefs_contribute.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/preferences_prefs_contribute.htm
@@ -33,7 +33,7 @@ This markup defines a preference page named &quot;Readme Example&quot; which is 
 Your plug-in's contribution to the preferences dialog (the &quot;Readme
 Example&quot; entry on the left) is shown before any of your code is run. </P>
 <P >
-<img border="0" src="images/preferences.jpg" width="606" height="532"></P>
+<img border="0" src="images/preferences.jpg" width="606" height="532" alt="Workbench preferences page"></P>
 <P >
 The &quot;Readme Example&quot; preference is added to the top level of the
 preference tree on the left.&nbsp; Why? Because a preference page contribution will be added as a root of the tree unless a
