--- a/bundles/org.eclipse.platform.doc.isv/guide/preferences_prop_contribute.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/preferences_prop_contribute.htm
@@ -44,7 +44,7 @@ Both pages are contributed for objects of type <b><a href="../reference/api/org/
 <P >
 Property pages look a lot like preference pages, except there is no hierarchy or categorization of property pages. In the dialog below, both readme property pages appear in the main list of pages.</P>
 <P >
-<img border="0" src="images/readmeproperties.jpg" width="661" height="532"></P>
+<img border="0" src="images/readmeproperties.jpg" width="661" height="532" alt="Properties dialog with readme entries"></P>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
