--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_popupMenus.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_popupMenus.htm
@@ -72,7 +72,7 @@ The action is implemented in <b>PopupMenuActionDelegate</b>.&nbsp;&nbsp;</P>
 <P >
 We can see the popup menu contribution when we select a readme file from the resource navigator.</P>
 
-<img border="0" src="images/readmepopupmenu.jpg" width="360" height="530">
+<img alt="" border="0" src="images/readmepopupmenu.jpg" width="360" height="530">
 <h4>Viewer contribution</h4>
 <p>
 A viewer contribution is used to contribute to a specific view or editor's popup menu
@@ -112,7 +112,7 @@ shown only in the readme outline view's popup menu.</P>
 
 
 <P >
-<img border="0" src="images/readmeoutlinerpopup.jpg" width="262" height="94"></P>
+<img alt="" border="0" src="images/readmeoutlinerpopup.jpg" width="262" height="94"></P>
 
 
  The interfaces required to contribute a <b>viewerContribution</b>
