--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench.htm
@@ -29,7 +29,7 @@ the content and properties of these resources. </P>
 <P >
 When you open your workbench on a set of projects, it looks something like this.</P>
 
-<p align="left"><img border="0" src="images/workbench.jpg" width="645" height="503">
+<p align="left"><img border="0" src="images/workbench.jpg" width="645" height="503" alt="Workbench with navigator view, editor, outliner, and task list">
 <P >
 The workbench is just a frame that can present various visual parts. These parts fall into two major categories:
 <b> views</b> and <b>editors</b>.</P>
@@ -52,7 +52,7 @@ Views</h3>
 <P >
 The workbench provides several standard views that allow the user to navigate or view something of interest. For example, the resource navigator lets the user navigate the workspace and select resources.</P>
 
-<img border="0" src="images/navigator.jpg" width="161" height="204">
+<img alt="" border="0" src="images/navigator.jpg" width="161" height="204">
 
 
 
@@ -61,7 +61,7 @@ Editors</h3>
 <P >
 Editors allow the user to open, edit, and save objects. The workbench provides a standard editor for text resources.</P>
 
-<img border="0" src="images/texteditor.jpg" width="451" height="221">
+<img alt="" border="0" src="images/texteditor.jpg" width="451" height="221">
 <P >
 Additional editors, such as Java code editors or HTML editors, can be supplied by
 plug-ins</P>
