--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_actionSets.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_actionSets.htm
@@ -25,7 +25,7 @@ perspective.&nbsp; Action sets are listed under <b>Other</b>.&nbsp; A checkmark 
 list of action sets available in our workbench.&nbsp; (Your workbench may look different depending on which plug-ins you have
 installed and which perspective is active.)</P>
 
-<img border="0" src="images/actionsets.jpg" width="669" height="450">
+<img border="0" src="images/actionsets.jpg" width="669" height="450" alt="Customize Perspective dialog with action set list">
 
 
 <P >
@@ -82,7 +82,7 @@ We also define some slots in our new menu so that actions can be inserted at spe
 This markup alone is enough to cause the menu to appear in the workbench <b>Window</b>
 menu.</P>
 <P >
-<img border="0" src="images/readmeactionset.jpg" width="229" height="329"></P>
+<img border="0" src="images/readmeactionset.jpg" width="229" height="329" alt="Workbench Window menu with Readme File Editor entry"></P>
 <P >
 Next, we define the actions themselves.&nbsp;&nbsp;</P>
 <P >
@@ -95,13 +95,13 @@ to indicate its location.&nbsp; First, we define the <b>menubarPath</b> to add t
 action to a slot in the menu
 that we just defined (&nbsp;<b>&quot;window/org_eclipse_ui_examples_readmetool/slot1&quot;</b>).</P>
 <P >
-<img border="0" src="images/readmeactionsetmenu.jpg" width="569" height="75"></P>
+<img border="0" src="images/readmeactionsetmenu.jpg" width="569" height="75" alt="Readme File Editor menu with menu items"></P>
 <P >
 Then, we define a new <b> toolbarPath</b> to insert our actions in the workbench tool
 bar.&nbsp; Since we've defined a new tool path, <b>&quot;readme&quot;</b>, the workbench will decide where it goes
 relative to other plug-in's toolbar contributions.</P>
 <P >
-<img border="0" src="images/readmeactionsettoolbar.jpg" width="248" height="55"></P>
+<img border="0" src="images/readmeactionsettoolbar.jpg" width="248" height="55" alt="Workbench tool bar with readme action"></P>
 <P >
 What happens when the action is selected by the user?&nbsp; The action is
 implemented by the class specified in the <b>class</b>
