--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_viewActions.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_viewActions.htm
@@ -26,7 +26,7 @@ pull-down menu. These actions appear because the readme tool plug-in contributes
 them using the
 <b> viewActions</b> extension.</P>
 
-<img border="0" src="images/readmeviewaction.jpg" width="179" height="161">
+<img alt="" border="0" src="images/readmeviewaction.jpg" width="179" height="161">
 <P >
 The relevant <b> plugin.xml</b> contribution is below.</P>
 <font color='#4444CC'><pre>
