--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_menupaths.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_menupaths.htm
@@ -184,7 +184,7 @@ the path &quot;<b>window/org_eclipse_ui_examples_readmetool/slot1</b>.&quot; </P
 
 
 <P >
-<img border="0" src="images/readmeactionsetmenu.jpg" width="569" height="75"> </P>
+<img alt="" border="0" src="images/readmeactionsetmenu.jpg" width="569" height="75"> </P>
 
 
 <P >Other plug-ins could add to our menu by using this same path (or perhaps one
